# ambient-widgets

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: api.py  filters.py  lyrics_service.py  requirements.txt
doc/: README.md  architecture.md  build-frontend.md  build-outputs.md  build-release.md  dev-browser.md  dev-tauri.md  icons.md  npm-scripts.md  runtime-calendar.md  runtime-genius-cache.md  runtime-ipc.md  runtime-lyrics-widget.md  runtime-quotes.md  runtime-spotify.md  runtime-startup.md  runtime-weather.md  runtime-welcome.md  runtime-windows.md  runtime-zenquotes.md  rust-tauri.md
pages/: calendar.html  lyrics.html  weather.html  welcome.html
scripts/: render-app-icon.py
src/: App.css  App.tsx  calendar.tsx  lyrics.tsx  main.tsx  vite-env.d.ts  weather.tsx  welcome.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-fetch-zen-quote.toml  allow-get-current-lyric.toml  allow-get-now-playing-track.toml  allow-spotify-is-authenticated.toml  allow-spotify-login.toml
src-tauri/src/: cache.rs  commands.rs  genius.rs  lib.rs  lyric_filter.rs  main.rs  zenquotes.rs
src-tauri/src/spotify/: api.rs  auth.rs  config.rs  error.rs  mod.rs  tokens.rs
src/components/: CalendarWidget.css  CalendarWidget.tsx  DailyWelcomeOverlay.css  DailyWelcomeOverlay.tsx  LyricTile.css  LyricTile.tsx  WeatherWidget.css  WeatherWidget.tsx
src/lib/: dailyWelcome.ts  locationStorage.ts  nowPlaying.ts  quoteApi.ts  userLocation.ts  weatherApi.ts  weatherCodes.ts  weatherLocation.ts  weatherTheme.ts  windowPersistence.ts
src/styles/: welcome-shell.css  widget-shell.css
src/types/: lyric.ts  nowPlaying.ts  quote.ts
src/utils/: calendar.ts  lyricFallback.ts
src/widgets/calendar/: CalendarWidget.css  CalendarWidget.tsx
src/widgets/lyrics/: LyricTile.css  LyricTile.tsx
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: AnimatedFavicon.tsx  Features.tsx  FinalCTA.tsx  Hero.tsx  InteractiveDemo.tsx  LessonsLearned.tsx  OrbitLogo.tsx  OrbitalBackground.tsx  Problem.tsx  Section.tsx  SiteNav.tsx  TechnicalDecisions.tsx
web/src/components/demo/: DemoCalendarWidget.tsx  DemoFocusNudge.tsx  DemoLyricTile.tsx  DemoWeatherWidget.tsx  DemoWelcomeOverlay.tsx  OrbitDesktopDemo.tsx  demo-widgets.css
web/src/config/: site.ts
web/src/hooks/: useInView.ts
web/src/lib/: animatedFavicon.ts  demoCalendar.ts
