# Cargo manifest: declares the Rust crate name, version, and dependencies for the native shell.
# The frontend (React) is separate — see root `package.json`. `cargo build` / `tauri build` use this file.
# Edition "2021" picks the Rust language version for the whole crate.

[package]
name = "ambient-widgets"
version = "0.1.0"
description = "Ambient Widgets desktop app"
authors = ["Trang Nguyen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Runs `build.rs` before compiling your code (generates Tauri glue from tauri.conf.json).
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` enables APIs like transparent windows on macOS (see tauri.conf.json).
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
thiserror = "2"
dotenvy = "0.15"
tiny_http = "0.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
scraper = "0.22"

